--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Input & Visualisasi Data</title>
+  <title>Trend dan Produksi Penumpang Kapal ASDP Cabang Merauke</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <div class="container">
-    <h2>Input Data dan Tampilkan Grafik</h2>
+    <h2>Trend dan Produksi Penumpang Kapal ASDP Cabang Merauke</h2>
 
     <form id="dataForm">
       <input type="text" id="labelInput" placeholder="Label (contoh: Jan)" required>
